--- a/Example/PackageManager/package.json
+++ b/Example/PackageManager/package.json
@@ -15,8 +15,11 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.14",
     "@types/react-router-dom": "^5.1.7",
+    "@webgpu/glslang": "^0.0.15",
+    "@webgpu/types": "^0.0.46",
     "axios": "^0.19.2",
     "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
