--- a/Example/PackageManager/tsconfig.json
+++ b/Example/PackageManager/tsconfig.json
@@ -13,7 +13,8 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
     "outDir": "./dist",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "typeRoots": [ "./node_modules/@webgpu/types", "./node_modules/@types"]
   },
   "exclude": ["node_modules"],
   "include": ["src"]
