--- a/Example/PackageManager/package.json
+++ b/Example/PackageManager/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --config ./webpack.config.prod",
-    "start": "webpack-dev-server --open --hot"
+    "start": "webpack-cli serve"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -15,7 +15,6 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.14",
     "@types/react-router-dom": "^5.1.7",
-    "@webgpu/glslang": "^0.0.15",
     "@webgpu/types": "^0.0.46",
     "axios": "^0.19.2",
     "babel-loader": "^8.0.6",
@@ -25,7 +24,7 @@
     "css-loader": "^3.4.2",
     "gl-matrix": "^3.3.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.3.1",
     "itk": "^12.3.1",
     "kw-web-suite": "^9.0.0",
     "mini-css-extract-plugin": "^0.9.0",
@@ -38,8 +37,8 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "vtk.js": "^13.14.2",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.3"
+    "webpack": "^5.31.2",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
