style: tsconfig was modified

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
-	"compilerOptions": {
-		"target": "esnext",
-		"moduleResolution": "node",
+  "compilerOptions": {
+    "target": "es6",
+    "moduleResolution": "node",
     "allowJs": false,
     "outDir": "./",
-		"isolatedModules": true,
+    "isolatedModules": true,
     "esModuleInterop": true,
     "declaration": true
-	},
-	"include": ["src"],
+  },
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
