--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "esModuleInterop": true,
     "declaration": true
 	},
-	"include": ["Src"],
+	"include": ["src"],
   "exclude": ["node_modules"]
 }
