style: apply code style by google typescript style

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "url": "https://github.com/gandis0713/webgpu-ts/issues"
   },
   "engines": {
-    "node": "^12.18.3",
+    "node": ">=12.18.3",
     "npm": "^6.14.6",
     "yarn": "^1.22.5"
   },
