refactor: clean project

--- a/samples/package.json
+++ b/samples/package.json
@@ -1,10 +1,9 @@
 {
   "name": "react_self",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "0.0.1",
+  "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --config ./webpack.config.prod",
     "start": "webpack-cli serve"
   },
   "devDependencies": {
