--- a/samples/package.json
+++ b/samples/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_self",
+  "name": "webgpu",
   "version": "0.0.1",
   "main": "index.ts",
   "license": "MIT",
@@ -13,20 +13,17 @@
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.14",
+    "@types/react": "^17.0.26",
+    "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.7",
     "@webgpu/types": "^0.1.6",
-    "axios": "^0.19.2",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
-    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
     "gl-matrix": "^3.3.0",
     "html-webpack-plugin": "^5.3.1",
-    "kw-web-suite": "^9.0.0",
-    "node-sass": "^4.13.1",
     "raw-loader": "^4.0.2",
     "react": "^16.12.0",
-    "react-dev-utils": "^10.1.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "style-loader": "^1.1.3",
