--- a/samples/package.json
+++ b/samples/package.json
@@ -28,6 +28,8 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "style-loader": "^1.1.3",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3",
     "webpack": "^5.31.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
