--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-cli serve"
+    "start": "webpack-cli serve --config ./samples/webpack.config.ts",
+    "build": "webpack --config ./lib/webpack.config.ts"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
