--- a/package.json
+++ b/package.json
@@ -9,12 +9,35 @@
     "clean-build": "rimraf ../build && yarn build"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.15.0",
+    "@babel/runtime": "^7.15.4",
+    "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.9.14",
+    "@types/react": "^17.0.26",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.7",
     "@webgpu/types": "^0.1.6",
+    "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
     "copyfiles": "^2.4.1",
+    "css-loader": "^3.4.2",
     "gl-matrix": "^3.3.0",
+    "html-webpack-plugin": "^5.3.1",
     "raw-loader": "^4.0.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "rimraf": "^3.0.2",
+    "style-loader": "^1.1.3",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "webpack": "^5.31.2",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
