--- a/samples/tsconfig.json
+++ b/samples/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
     "jsx": "react",
     "esModuleInterop": true,
     "baseUrl": "./",
 		"paths": {
-			"@WebGPULib": ["../build/index.d.ts"],
+			"@WebGPULib": ["../src/index.ts"],
 		}
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["../node_modules, ./build/**/*"],
 }
