--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "declaration": true,
     "noImplicitAny": true,
-    "outDir": "./build",
+    "outDir": "./build"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules, ./samples/**/*, ./build/**/*"],
